# gradientlss-rs

./: Cargo.toml  README.md
examples/: multivariate_example.rs  shap_integration.rs
src/: dist_select.rs  error.rs  hyper_opt.rs  interpretability.rs  lib.rs  model.rs  plotting.rs  types.rs  utils.rs
src/backend/: lightgbm_backend.rs  mod.rs  traits.rs  xgboost_backend.rs
src/distributions/: base.rs  beta.rs  cauchy.rs  dirichlet.rs  expectile.rs  gamma.rs  gaussian.rs  gumbel.rs  laplace.rs  log_normal.rs  logistic.rs  mixture.rs  mod.rs  mvn.rs  mvn_lora.rs  mvt.rs  negative_binomial.rs  poisson.rs  spline_flow.rs  student_t.rs  weibull.rs  zabeta.rs  zagamma.rs  zaln.rs  zinb.rs  zipoisson.rs
tests/: integration_tests.rs
