[package]
name = "gradientlss"
version = "0.1.0"
edition = "2024"
description = "Distributional Gradient Boosting for Location, Scale, and Shape"
license = "MIT"
repository = "https://github.com/agene0001/gradientlss-rs"
keywords = ["machine-learning", "gradient-boosting", "distributions", "xgboost", "lightgbm"]
categories = ["science", "mathematics"]

[features]
default = []
# Enable XGBoost backend
xgboost = ["dep:xgb"]
# Enable LightGBM backend (uses lgbm crate which supports custom objectives)
lightgbm = ["dep:lgbm"]
# Enable plotting capabilities (feature importance, PDP, density plots, etc.)
plotting = ["dep:plotters"]
# Enable all backends
full = ["xgboost", "lightgbm"]
# Enable all features including plotting
all = ["xgboost", "lightgbm", "plotting"]

[dependencies]
# Core dependencies
ndarray = { version = "0.17.2", features = ["serde"] }
thiserror = "2.0.18"
rand = "0.9"
rand_distr = "0.5"
rand_chacha = "0.9"

# Statistical distributions
statrs = "0.18.0"

# Optimization (L-BFGS for start value calculation - matching Python's torch.optim.LBFGS)
argmin = "0.11.0"
argmin-math = { version = "0.5.1", features = ["vec"] }

# Parallelization
rayon = "1.11.0"

# Hyperparameter optimization (tpe uses rand 0.8)
tpe = "0.2.0"
rand_compat = { package = "rand", version = "0.8" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
erased-serde = "0.4.9"
bincode = "1.3"
typetag = "0.2.21"
tempfile = "3.24.0"

# Gradient boosting backends (optional)
# These require native libraries to be built:
# - cmake must be installed
# - For XGBoost: xgboost native library
# - For LightGBM: lightgbm native library
xgb = { version = "3.0.5", optional = true }
lgbm = { version = "0.0.6", optional = true }

# Plotting (optional)
plotters = { version = "0.3.7", optional = true }
[patch.crates-io]
# Replace 'xgb' with the exact name of the package in the forked repo
xgb = { git = "https://github.com/agene0001/rust-xgboost", branch = "master" }
[dev-dependencies]
approx = "0.5.1"
tempfile = "3.24"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
[profile.production]
inherits = "release"
# For even faster builds during development
[profile.dev]
opt-level = 1

# Fast debug builds with some optimization
[profile.dev.package."*"]
opt-level = 2